Bugfix/svg icon alignment (#192)
* refactor(stylings): change svg icons vertical align and add sass var

* docs: tweak readme

--- a/packages/common/src/styles/sass-utilities.scss
+++ b/packages/common/src/styles/sass-utilities.scss
@@ -1,3 +1,5 @@
+$svg-icon-vertical-align: text-top !default;
+
 @function encodecolor($string) {
 	@if type-of($string) == 'color' {
         $hex: str-slice(ie-hex-str($string), 4);
@@ -38,7 +40,7 @@
     height: $height;
     width: $width;
     display: $display;
-    vertical-align: bottom;
+    vertical-align: $svg-icon-vertical-align;
     // margin-top: -1px; // small patch to remove padding all around the SVG
     content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" fill="#{$fill}" viewBox="0 0 24 24">\
         <path d="#{$path-drawing}"></path>\
